[tool.poetry]
name = "testerproject"
version = "0.1.0"
description = ""
authors = ["Mikael <mks@danskecommodities.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "*"
pandas = "^1.5.2"
plotly = "^5.13.0"
dash = "^2.8.1"
dash-bootstrap-components = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
